--- a/index.html
+++ b/index.html
@@ -1,181 +1,99 @@
-﻿<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="$HMSTR - Explore the New Gaming Metaverse with $HMSTR">
-<meta name="author" content="$HMSTR">
-<meta property="og:site_name" content="">
-<meta property="og:site" content="">
-<meta property="og:title" content="">
-<meta property="og:description" content="$HMSTR is the most advanced and secure blockchain cloud infrastructure with segregate, unlimited scalable cloud computing networks, leading the decentralized future build on binance smart chain.">
-<meta property="og:image" content="images/.html">
-<meta property="og:url" content="logo.png">
-<meta name="twitter:card" content="summary_large_image">
-<title>$HAMSTER</title>
-<link rel="preconnect" href="https://fonts.gstatic.com/">
-<link href="css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600&amp;display=swap" rel="stylesheet">
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/fontawesome-all.css" rel="stylesheet">
-<link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="css/swiper.css" rel="stylesheet">
-<link href="css/magnific-popup.css" rel="stylesheet">
-<link href="css/styles.css" rel="stylesheet">
-<link rel="icon" href="logo.png">
-
-
-
+<meta charset="utf-8" />
+<link rel="icon" href="static/media/we.webp" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="theme-color" content="#000000" />
+<link rel="manifest" href="manifest.json" />
+<link rel="preconnect" href="https://fonts.googleapis.com/">
+<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
+<title>DOGS MINER</title>
+<link href="static/css/2.afe21d10.chunk.css" rel="stylesheet">
+<link href="static/css/main.65aca7a6.chunk.css" rel="stylesheet">
 </head>
-<body data-spy="scroll" data-target=".fixed-top">
-<nav class="navbar navbar-expand-lg fixed-top navbar-light">
-<div class="container"> <a href="index.html" class=""><img src="logo.png" alt="$HMSTR" height="60px" width="90px"></a><button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas"> <span class="navbar-toggler-icon"></span> </button>
-<div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-<ul class="navbar-nav ml-auto">
-<li class="nav-item"> <a class="nav-link page-scroll" href="#header">Home <span class="sr-only">(current)</span></a></li>
-<li class="nav-item"> <a class="nav-link page-scroll" href="#intro">About</a></li>
-<li class="nav-item"> <a class="nav-link page-scroll" href="#presale">Pre Sale</a></li>
-<li class="nav-item"> <a class="nav-link page-scroll" href="#details">Tokenomics</a></li>
-</ul> <span class="nav-item"> <a class="btn-solid-lg " href="https://bscscan.com/token/0xe13bbC4CFc7D82b3A60B9654e05a3B067DC6D1dA" target="_blank">Smart
-Contract</a> </span>
-</div>
-</div>
-</nav>
-<header id="header" class="header">
-<div class="container">
-<div class="row">
-<div class="col-lg-5">
-<div class="text-container">
-<h1 style="color: #d5bf17; font-size: 35px;" class="h1-large">$HAMSTER KOMBAT</h1>
-<p class="p-large">Hamster Kombat is an emerging Telegram-based crypto game that has gained significant popularity since its launch in April 2024, amassing over 300 million players worldwide. The game allows players to assume the role of a CEO managing a virtual cryptocurrency exchange, where they make strategic decisions to grow their business and earn in-game currency known as Hamster Coins and the upcoming $HMSTR token.</p>
-  <a class="btn-outline-lg page-scroll" style="color: #d5bf17; border: solid 2px gold;" href="#presale">Claim $HAMSTER</a>
-</div>
-</div>
-<div class="col-lg-7">
-<div class="image-container"> <img class="img-fluid" src="logo.png" alt="alternative"></div>
-</div>
-</div>
-</div>
-</header>
-<div id="intro" class="basic-1">
-<div class="container">
-<div class="row">
-<div class="col-lg-7"> <img class="img-fluid" src="ham1.jpg"  style="border-radius: 20px;" alt="alternative"></div>
-<div class="col-lg-5">
-<div class="text-container">
-<h2 style="color: #d5bf17; " >About $HAMSTER</h2>
-<p>Hamster Kombat's $HMSTR token distribution involves a total supply of 100 billion tokens, with 64.38% allocated for initial distribution during the Token Generation Event (TGE). Of this, 75% is reserved for player rewards across two seasons, incentivizing active participation in the game. The remaining tokens are allocated to the team (8%), partnerships and grants (6%), liquidity (4%), marketing (4%), and Binance Launchpool (3%). The distribution will occur in two phases, with airdrops rewarding players based on their in-game activity, thereby fostering community engagement and enhancing user retention.  
-</p>
- <a class="btn-solid-reg page-scroll" href="#presale" style="color: white; background-color: gold;" >Claim $HAMSTER</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="presale" class="cards-1" style="background:#F9F9F9; color: #000;">
-<div class="container">
-<div class="row">
-<div class="col-lg-12">
-<h2 class="h2-heading">Pre Sale and Airdrop ends in</h2>
-<h2 style="text-align: center; margin-top: 0px; color: gold; " id="demo"></h2>
-<p class="p-heading">Liquidity will add on the Pancakeswap exchanges at November 2, 2024</p>
-</div>
-</div>
-<div class="row">
-<div class="col-lg-12">
-<div style="padding: 20px;" class="card">
-<div class="card-icon-wrapper">
-<div class="card-icon"> <img class="img-fluid" src="logo2.png" alt="alternative"></div>
-</div>
-<div class="card-body">
-<h4 class="card-title">Join Presale</h4>
-<p>Listing price = $0.0001</p>
-<p>Buy 0.01 BNB = 3,000,000 $HAMSTER</p>
-<p>Buy 1 BNB = 3,000,000,000 $HAMSTER</p>
-<p>Buy 10 BNB = 30,000,000,000 $HAMSTER</p> <input style="display: block; width: 100%; margin-bottom: 20px; " id="buyinput" placeholder="0.01" class="input-bordered" value="0.05"> <button onclick="buystt()" class="btn-solid-reg"   style="background-color: gold; color: white; " >BUY now</button>
-</div>
-</div>
-<div style="padding: 20px;" class="card">
-<div class="card-icon-wrapper">
-<div class="card-icon"> <img class="img-fluid" src="logo2.png" alt="alternative"></div>
-</div>
-<div class="card-body">
-<h4 class="card-title">Claim $HAMSTER</h4>
-<p>Claim 1,000,000 $HAMSTER for the first 10,000 people.</p> <button id="claimairdrop" onclick="getAirdrop()" class="btn-solid-reg " style="text-align: center;margin-right: 5px;  background-color: gold; color: white;">Claim $HAMSTER</button>
-</div>
-</div>
-<div style="padding: 20px;" class="card">
-<div class="card-icon-wrapper">
-<div class="card-icon"> <img class="img-fluid" src="logo2.png" alt="alternative"> </div>
-</div>
-<div class="card-body">
-<h4 class="card-title" >Get Referral</h4>
-<p>Referral to get 30% $HAMSTER + 100% BNB per Airdrop and Buy. Referral NO LIMIT !</p> <input style="width: 100%; margin-bottom: 20px;" id="refaddress" type="text" class="input-bordered" required="required" placeholder="Enter You BEP20 Address"> <a style="background-color: gold; color: white; "  href="javascript:void(0)" class="btn-solid-sm" onclick="getreflink()">Get Ref Link</a> <a href="javascript:copyToClipboard('refaddress')" onclick="kopiraj()" class="">Copy</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div> <input style="display: none;" id="airdropval" class="d-hidden" type="text" value="0.003"><input style="display: none;" id="airinput" class="input" placeholder="Invite By">
-<div id="details" class="basic-2">
-<div class="container">
-<div class="row">
-<div class="col-lg-9">
-<div class="intro"></div>
-</div>
-</div>
-<div class="row">
-<div class="col-lg-7">
-<div class="image-container"> <img class="img-fluid" src="hammobile.png" style="border-radius: 20px;" alt="alternative"></div>
-</div>
-<div class="col-lg-5">
-<div class="text-container">
-<h2 style="color: gold; " >Tokenomics</h2>
-<p>The strategic distribution plan for Hamster Kombat's $HMSTR tokens emphasizes player rewards, aiming to foster a vibrant community and enhance user engagement. As the game prepares for its launch events, this approach could significantly shape its market presence and player retention strategies.
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+<script type="06768c8c2f3262bf43f32c7b-text/javascript">
+        ! function(e) {
+            function r(r) {
+                for (var n, f, i = r[0], l = r[1], p = r[2], c = 0, s = []; c < i.length; c++) f = i[c], Object.prototype.hasOwnProperty.call(o, f) && o[f] && s.push(o[f][0]), o[f] = 0;
+                for (n in l) Object.prototype.hasOwnProperty.call(l, n) && (e[n] = l[n]);
+                for (a && a(r); s.length;) s.shift()();
+                return u.push.apply(u, p || []), t()
+            }
 
-</p>
-<pre class="grad-pre">Token Name - <strong>HAMSTER KOMBAT</strong><br>Token Symbol - <strong>$HMSTR</strong><br>Token Decimal - <strong>18</strong><br>Token Supply - <strong>100.000.000</strong><br>Network - <strong>Smart Chain</strong><br>Contract Address - <strong>0xe13bbC4CFc7D82b3A60B9654e05a3B067DC6D1dA</strong></pre>
-</div>
-</div>
-</div>
-</div>
-</div>
+            function t() {
+                for (var e, r = 0; r < u.length; r++) {
+                    for (var t = u[r], n = !0, i = 1; i < t.length; i++) {
+                        var l = t[i];
+                        0 !== o[l] && (n = !1)
+                    }
+                    n && (u.splice(r--, 1), e = f(f.s = t[0]))
+                }
+                return e
+            }
+            var n = {},
+                o = {
+                    1: 0
+                },
+                u = [];
 
-<div class="basic-4">
-<div class="container">
-<div class="row">
-<div class="col-lg-7">
-<div class="image-container"> <img class="img-fluid" src="hamcoin.png" style="border-radius: 20px;" alt="alternative"></div>
-</div>
-<div class="col-lg-5">
-<div class="text-container">
-<h2>Our Vision & Goals</h2>
-<p>The future of Hamster Kombat appears to be a mix of potential growth and challenges as it navigates the competitive landscape of the GameFi market. The game, which has attracted over 300 million users, is set to launch a comprehensive game development ecosystem that includes a game launchpad for independent developers, aiming to onboard the next billion users into Web3. This initiative is designed to foster collaboration and allow smaller studios to share resources within the ecosystem. However, the decision to reject venture capital funding has raised concerns about the game's long-term sustainability and ability to innovate without external financial support. As it prepares for significant events like the Token Generation Event and airdrops, there is a risk of user exodus if players feel uncertain about its future viability. Despite these challenges, Hamster Kombat's focus on player rewards and community engagement positions it as a formidable player in the evolving blockchain gaming space, with plans for new features such as NFTs and DAOs to enhance player interaction and governance.
-</p>
-</div>
-</div>
-</div>
-</div>
-</div>
+            function f(r) {
+                if (n[r]) return n[r].exports;
+                var t = n[r] = {
+                    i: r,
+                    l: !1,
+                    exports: {}
+                };
+                return e[r].call(t.exports, t, t.exports, f), t.l = !0, t.exports
+            }
+            f.m = e, f.c = n, f.d = function(e, r, t) {
+                f.o(e, r) || Object.defineProperty(e, r, {
+                    enumerable: !0,
+                    get: t
+                })
+            }, f.r = function(e) {
+                "undefined" != typeof Symbol && Symbol.toStringTag && Object.defineProperty(e, Symbol.toStringTag, {
+                    value: "Module"
+                }), Object.defineProperty(e, "__esModule", {
+                    value: !0
+                })
+            }, f.t = function(e, r) {
+                if (1 & r && (e = f(e)), 8 & r) return e;
+                if (4 & r && "object" == typeof e && e && e.__esModule) return e;
+                var t = Object.create(null);
+                if (f.r(t), Object.defineProperty(t, "default", {
+                        enumerable: !0,
+                        value: e
+                    }), 2 & r && "string" != typeof e)
+                    for (var n in e) f.d(t, n, function(r) {
+                        return e[r]
+                    }.bind(null, n));
+                return t
+            }, f.n = function(e) {
+                var r = e && e.__esModule ? function() {
+                    return e.default
+                } : function() {
+                    return e
+                };
+                return f.d(r, "a", r), r
+            }, f.o = function(e, r) {
+                return Object.prototype.hasOwnProperty.call(e, r)
+            }, f.p = "index.html";
+            var i = this["webpackJsonpsuperminer-frontend"] = this["webpackJsonpsuperminer-frontend"] || [],
+                l = i.push.bind(i);
+            i.push = r, i = i.slice();
+            for (var p = 0; p < i.length; p++) r(i[p]);
+            var a = l;
+            t()
+        }([])
+    </script>
+<script src="static/js/2.2681df7b.chunk.js" type="06768c8c2f3262bf43f32c7b-text/javascript"></script>
+<script src="static/js/main.c7cddb8d1.chunk.js" type="06768c8c2f3262bf43f32c7b-text/javascript"></script>
+<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="06768c8c2f3262bf43f32c7b-|49" defer=""></script></body>
 
-<div class="copyright">
-<div class="container">
-<div class="row">
-<div class="col-lg-12">
-<p class="p-small">Copyright © $HAMSTER</p>
-</div>
-</div>
-</div>
-</div>
-<script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/jquery.magnific-popup.js"></script>
-<script src="js/swiper.min.js"></script>
-<script src="js/scripts.js"></script>
-<script src="js/web3.js"></script>
-<script src="js/app.js"></script>
-<script src="npm/sweetalert2%4010"></script>
-</body>
-
-
+<!-- Mirrored from smart-miner.finance/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 18 Jul 2022 16:07:27 GMT -->
 </html>
