--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 
+<!-- Mirrored from smart-miner.finance/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 18 Jul 2022 16:07:18 GMT -->
 <head>
 <meta charset="utf-8" />
 <link rel="icon" href="static/media/we.webp" />
@@ -10,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com/">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
-<title>DOGS MINER</title>
+<title>BAKED BEANS</title>
 <link href="static/css/2.afe21d10.chunk.css" rel="stylesheet">
 <link href="static/css/main.65aca7a6.chunk.css" rel="stylesheet">
 </head>
