--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
             rel="stylesheet"
         />
-        <title>$DOGS BNB MINER</title>
+        <title>$EGGS BNB MINER</title>
         <link href="static/css/2.afe21d10.chunk.css" rel="stylesheet" />
         <link href="static/css/main.65aca7a6.chunk.css" rel="stylesheet" />
     </head>
